[tool.poetry]
name = "pem"
version = "0.1.0"
description = ""
authors = ["Josef Fröhle <github@josef-froehle.de>"]

[tool.poetry.dependencies]
python = "^3.8"
html-to-json = "^2.0.0"
"ruamel.yaml" = "^0.17.20"
html2json = "^0.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
